[gd_scene load_steps=24 format=3 uid="uid://bvh7aegv1obey"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_4svxw"]
[ext_resource type="Resource" uid="uid://b8yv02od38lx6" path="res://resources/spear_enemy.tres" id="2_obb8v"]
[ext_resource type="PackedScene" uid="uid://bi1vwqbpbxlva" path="res://scenes/hitbox.tscn" id="2_yqimg"]
[ext_resource type="Shader" path="res://resources/hit_flash.gdshader" id="3_s5wxo"]
[ext_resource type="Texture2D" uid="uid://bmj7l7rm1t040" path="res://graphics/enemy_units_rev.png" id="4_lk6m5"]
[ext_resource type="PackedScene" uid="uid://biviu72kq08r0" path="res://scenes/weapon.tscn" id="5_7s2qq"]
[ext_resource type="Script" path="res://scripts/fsm.gd" id="6_dv7k2"]
[ext_resource type="Script" path="res://scripts/basic_enemy_idle_state.gd" id="7_3dnxe"]
[ext_resource type="Script" path="res://scripts/basic_enemy_hit_state.gd" id="9_0121g"]
[ext_resource type="Script" path="res://scripts/spear_enemy_move_state.gd" id="9_o203r"]
[ext_resource type="Script" path="res://scripts/basic_enemy_attack_state.gd" id="10_8hrt4"]
[ext_resource type="Script" path="res://scripts/context_steering_component.gd" id="11_0cec4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmt4y"]
size = Vector2(20, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqufc"]
resource_local_to_scene = true
size = Vector2(62, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_scyus"]
radius = 224.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gnilm"]
radius = 67.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lkbvx"]
resource_local_to_scene = true
shader = ExtResource("3_s5wxo")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8xeu"]
resource_local_to_scene = true
size = Vector2(26, 12)

[sub_resource type="Animation" id="Animation_gbtbc"]
resource_name = "Hit"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Body:material:shader_parameter/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_uflbl"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_otjxg"]
resource_name = "Move"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_tjjdc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Body:material:shader_parameter/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qpvas"]
_data = {
"Hit": SubResource("Animation_gbtbc"),
"Idle": SubResource("Animation_uflbl"),
"Move": SubResource("Animation_otjxg"),
"RESET": SubResource("Animation_tjjdc")
}

[node name="Enemy" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 4
collision_mask = 19
script = ExtResource("1_4svxw")
attack_type = "Thrust"
unit_data = ExtResource("2_obb8v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_fmt4y")

[node name="Hitbox" parent="." node_paths=PackedStringArray("target") instance=ExtResource("2_yqimg")]
collision_layer = 4
collision_mask = 0
target = NodePath("..")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_oqufc")

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_scyus")

[node name="AttackSensor" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackSensor"]
position = Vector2(1, -14)
shape = SubResource("CircleShape2D_gnilm")
disabled = true

[node name="Pivot" type="Marker2D" parent="."]

[node name="Body" type="Sprite2D" parent="Pivot"]
material = SubResource("ShaderMaterial_lkbvx")
position = Vector2(0, -32)
texture = ExtResource("4_lk6m5")
hframes = 8
vframes = 6

[node name="WeaponPivot" type="Marker2D" parent="Pivot"]
position = Vector2(0, -10)

[node name="Weapon" parent="Pivot/WeaponPivot" node_paths=PackedStringArray("weapon_pivot", "user") instance=ExtResource("5_7s2qq")]
visible = false
weapon_pivot = NodePath("..")
user = NodePath("../../..")

[node name="Hurtbox" parent="Pivot/WeaponPivot/Weapon/Weapon" index="0"]
collision_layer = 0
collision_mask = 17
monitorable = true

[node name="CollisionShape2D" parent="Pivot/WeaponPivot/Weapon/Weapon/Hurtbox" index="0"]
position = Vector2(45, 0)
shape = SubResource("RectangleShape2D_v8xeu")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("current_state", "animator", "actor", "pivot", "context_steering_component")]
script = ExtResource("6_dv7k2")
current_state = NodePath("IdleState")
animator = NodePath("../AnimationPlayer")
actor = NodePath("..")
pivot = NodePath("../Pivot")
context_steering_component = NodePath("../ContextSteeringComponent")

[node name="IdleState" type="Node" parent="FSM"]
script = ExtResource("7_3dnxe")

[node name="MoveState" type="Node" parent="FSM" node_paths=PackedStringArray("cooldown_timer")]
script = ExtResource("9_o203r")
cooldown_timer = NodePath("../../AttackCooldownTimer")

[node name="HitState" type="Node" parent="FSM"]
script = ExtResource("9_0121g")

[node name="AttackState" type="Node" parent="FSM" node_paths=PackedStringArray("cooldown_timer")]
script = ExtResource("10_8hrt4")
cooldown_timer = NodePath("../../AttackCooldownTimer")

[node name="ContextSteeringComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("11_0cec4")
actor = NodePath("..")
collision_mask = 18

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="ChaseStopTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qpvas")
}

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="area_entered" from="AttackSensor" to="." method="_on_attack_sensor_area_entered"]
[connection signal="animation_finished" from="Pivot/WeaponPivot/Weapon/AnimationPlayer" to="FSM" method="_on_animation_finished"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="ChaseStopTimer" to="." method="_on_chase_stop_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="FSM" method="_on_animation_finished"]

[editable path="Hitbox"]
[editable path="Pivot/WeaponPivot/Weapon"]
[editable path="Pivot/WeaponPivot/Weapon/Weapon/Hurtbox"]
